--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 未知国家-1.85MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
   - {name: 🇸🇬 新加坡-670.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.28MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.93MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-177.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2, server: 103.56.60.185, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.74MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-1.85MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-670.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
