--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 47795, type: ss, cipher: chacha20-ietf-poly1305, password: 59836db8-6e5f-4b8b-aa1e-3963f9d9c923}
-  - {name: 🇨🇳 中国-241.3KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
-  - {name: 🇸🇬 新加坡-437.5KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.86MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 47795, type: ss, cipher: chacha20-ietf-poly1305, password: d975d166-f2b7-4072-a31a-edbe5c097011}
-  - {name: 🇫🇷 法国-732.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-699.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-592.8KB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 34532, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-660.0KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-871.8KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 9eef43d9-712e-4850-bb7a-12b279a96de5, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-216.8KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇨🇦 加拿大-242.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-437.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-732.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
